[package]
name = "bullets"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "./lang/component",
  "./lang/compiler",
  "./lang/vm",
]

[dependencies]
lang_component = { path = "./lang/component" }
lang_vm = { path = "./lang/vm" }
lang_compiler = { path = "./lang/compiler" }

ggez = "0.7.0"
glam = "0.20.5"
